# coral

./: .flake8  .gitignore  .pre-commit-config.yaml  DATASET_LICENSE  DATASET_README.md  LICENSE  MODEL_315M_README.md  MODEL_315M_XLSR_README.md  MODEL_LICENSE  MODEL_README.md  README.md  get_untranscriped_conv_files.py  makefile  pyproject.toml  run_model_evaluation.sh
.github/workflows/: ci.yaml  docs.yaml
config/: __init__.py  asr_finetuning.yaml  config.yaml  dataset_creation.yaml  dataset_creation_conversation_redacted.yaml  dataset_validation.yaml  demo.yaml  demo_hoert.yaml  evaluation.yaml  finetuning.yaml  split_creation.yaml
config/dataset/: common_voice_da.yaml  common_voice_nn.yaml  common_voice_sv.yaml  coral.yaml  fleurs_da.yaml  fleurs_nb.yaml  fleurs_sv.yaml  ftspeech.yaml  nota.yaml  nst_da.yaml  test.yaml  test_dataset.yaml
config/datasets/: alvenir_test_set.yaml  appen_oss.yaml  appen_wiki.yaml  common_voice_13_da.yaml  common_voice_13_nn.yaml  common_voice_13_sv.yaml  common_voice_17.yaml  common_voice_19.yaml  common_voice_9.yaml  common_voice_9_da.yaml  common_voice_da.yaml  common_voice_nn.yaml  common_voice_sv.yaml  coral.yaml  coral2conv.yaml  coral2read.yaml  coral_conversation.yaml  coral_conversation_internal.yaml  coral_conversational.yaml  coral_read_aloud.yaml  coral_readaloud_internal.yaml  coral_test_set.yaml  coral_tts.yaml  fleurs.yaml  fleurs_da.yaml  fleurs_nb.yaml  fleurs_sv.yaml  ftspeech.yaml  nota.yaml  nst.yaml  nst_da.yaml  test_dataset.yaml  youtube.yaml
config/decoder_datasets/: common_voice.yaml  reddit.yaml  wikipedia.yaml  youtube.yaml
config/experiment_tracking/: mlflow.yaml  wandb.yaml
config/hydra/job_logging/: custom.yaml
config/model/: test-wav2vec2.yaml  test-whisper.yaml  test.yaml  test_wav2vec2.yaml  test_whisper.yaml  wav2vec.yaml  wav2vec2-large.yaml  wav2vec2-medium.yaml  wav2vec2-small.yaml  wav2vec2-with-lm.yaml  wav2vec2.yaml  wav2vec2_alvenir_config.yaml  wav2vec2_no_reg.yaml  wav2vec2_with_lm.yaml  whisper-large-turbo.yaml  whisper-large.yaml  whisper-medium.yaml  whisper-small.yaml  whisper-tiny.yaml  whisper-xsmall.yaml  whisper-xxsmall.yaml  whisper.yaml  whisper_large.yaml  whisper_medium.yaml  whisper_small.yaml  whisper_xsmall.yaml  whisper_xxsmall.yaml  xls-r-300m-danish.yaml  xls_r_300m_danish.yaml
docs/: coral.html  search.js
docs/coral/: compute_metrics.html  data.html  data_collators.html  data_models.html  evaluate.html  finetune.html  model_setup.html  ngram.html  types.html  utils.html  validation.html  wav2vec2.html  whisper.html
notebooks/: compute_durations.ipynb  data_insights.ipynb  data_stats.ipynb  get_conv_files.ipynb  mos_evaluation.ipynb  splits.ipynb  test-coral-validation.ipynb  update_conv_overview.ipynb
src/coral/: Dialect_Helper.py  Geography_Helper.py  __init__.py  compute_metrics.py  data.py  data_collators.py  data_models.py  evaluate.py  finetune.py  metrics.py  model_setup.py  ngram.py  plot.py  prepare_raw_data.py  protocols.py  recruitment_grid.py  trainer_utils.py  tts.py  types.py  utils.py  validation.py  wav2vec2.py  whisper.py
src/coral/experiment_tracking/: __init__.py  extracking_factory.py  extracking_setup.py  mlflow.py  mlflow_setup.py  wandb.py  wandb_setup.py
src/coral_models/: __init__.py  compute_metrics.py  data.py  finetune.py  model_setup.py  plot.py  prepare_raw_data.py  protocols.py  utils.py  wav2vec2.py  whisper.py
src/coral_models/asr/: __init__.py  data.py  ftspeech.py  ngram_model.py  utils.py
src/coral_models/asr/wav2vec/: __init__.py  compute_metrics.py  evaluate.py  finetune.py  preprocess.py
src/coral_models/asr/wav2vec2/: __init__.py  clean.py  compute_metrics.py  data_collator.py  finetune.py  preprocess.py
src/coral_models/asr/whisper/: __init__.py  evaluate.py  finetune.py
src/coral_models/tts/: __init__.py
src/scripts/: build_coral_asr.py  build_coral_asr_dialect.py  build_coral_conversation_redacted.py  build_coral_data.py  build_coral_tts.py  build_ftspeech.py  build_nota.py  build_nst_da.py  build_synthetic_nts.py  create_comparison_dataset_level.py  create_comparison_plot.py  create_comparison_plot_folder.py  create_levenshtein_plots.py  download_dataset.py  download_ftspeech.py  evaluate.py  evaluate_model.py  evaluate_wav2vec2.py  find_faulty_audio_clips.py  finetune.py  finetune_asr_model.py  finetune_model.py  finetune_tts_model.py  fix_dot_env_file.py  get_coral_split_ids.py  plot_training_trajectory.py  push_coral_to_hub.py  push_ftspeech_to_hub.py  push_testset_to_hub.py  push_to_hub.py  run_asr_demo.py  run_asr_demo_whisper.py  run_evaluation.py  select_testset.py  train_ngram_decoder.py  validate_coral_asr.py  versioning.py
tests/: __init__.py  conftest.py  finetune.py  test_asr__ngram_model.py  test_asr__wav2vec2__clean.py  test_asr__wav2vec2__preprocess.py  test_asr__whisper__finetune.py  test_compute_metrics.py  test_data.py  test_data_collators.py  test_data_models.py  test_dummy.py  test_evaluate.py  test_finetune.py  test_model_setup.py  test_ngram.py  test_plot.py  test_tts__utils.py  test_utils.py  test_wav2vec2.py  test_whisper.py
tests/asr/: test_ftspeech.py  test_utils.py
tests/asr/wav2vec2/: conftest.py  test_clean.py  test_compute_metrics.py  test_data_collator.py  test_evaluate.py
