[tool.poetry]
name = "coral"
version = "0.0.0"
description = "Danish ASR and TTS models associated with the CoRal project."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hydra-core = "^1.1.1"
evaluate = "^0.4.0"
transformers = "^4.41.0"
torch = "^2.0.0"
librosa = "^0.10.0"
soundfile = "^0.12.1"
torchaudio = "^2.0.1"
pyctcdecode = "^0.5.0"
datasets = "^2.19.0"
click = "^8.1.3"
pydub = "^0.25.1"
jiwer = "^3.0.1"
wandb = "^0.15.3"
accelerate = "^0.29.3"
requests = "^2.31.0"
openpyxl = "^3.1.2"
pycountry = "^22.3.5"
wave = "^0.0.2"
kenlm = {url = "https://github.com/kpu/kenlm/archive/master.zip", optional=true}
matplotlib = "^3.7.3"
deepspeed = "^0.12.3"
python-dotenv = "^1.0.1"
nltk = {version = "^3.8.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1"
pre-commit = ">=3.6.2"
lxml = ">=5.1.0"
pytest-cov = ">=4.1.0"
readme-coverage-badger = ">=0.1.2"
ruff = ">=0.4.1"
mypy = ">=1.9.0"
nbstripout = ">=0.7.1"

[tool.poetry.extras]
kenlm = ["kenlm", "nltk"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/coral',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
]
log_cli_level = "info"
testpaths = ["tests", "src/coral"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".scandeval_cache",
    ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "I",
    "D",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
