[tool.poetry]
name = "coral"
version = "0.0.0"
description = "Danish ASR and TTS models associated with the CoRal project."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hydra-core = ">=1.1.1"
evaluate = ">=0.4.0"
transformers = ">=4.44.2"
torch = ">=2.0.0"
librosa = ">=0.10.0"
soundfile = ">=0.12.1"
torchaudio = ">=2.0.1"
pyctcdecode = ">=0.5.0"
datasets = ">=2.19.0"
click = ">=8.1.3"
pydub = ">=0.25.1"
jiwer = ">=3.0.1"
wandb = ">=0.15.3"
accelerate = ">=0.29.3"
requests = ">=2.31.0"
openpyxl = ">=3.1.2"
pycountry = ">=22.3.5"
wave = ">=0.0.2"
deepspeed = ">=0.12.3"
python-dotenv = ">=1.0.1"
joblib = "^1.4.2"
kenlm = {url = "https://github.com/kpu/kenlm/archive/master.zip", optional=true}
gradio = {version = "^5.11.0", optional=true}
samplerate = {version="^0.2.1", optional=true}
punctfix = {version="^0.11.1", optional=true}
matplotlib = {version = "^3.9.2", optional = true}
mlflow = "^2.17.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1"
pre-commit = ">=3.6.2"
lxml = ">=5.1.0"
pytest-cov = ">=4.1.0"
readme-coverage-badger = ">=0.1.2"
ruff = ">=0.6.2"
mypy = ">=1.11.2"
nbstripout = ">=0.7.1"
pdoc = ">=14.5.0"
jupyterlab = ">=4.2.5"
ipywidgets = ">=8.1.3"

[tool.poetry.extras]
kenlm = ["kenlm"]
demo = ["gradio", "samplerate", "punctfix"]
plotting = ["matplotlib"]
all = ["kenlm", "gradio", "samplerate", "punctfix", "matplotlib"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/coral',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = ["tests", "src/coral"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".scandeval_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "I",
    "D",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
